--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -690,6 +690,39 @@ The initial command, “list”, which merely displayed all the persons in the l
 
 <<<
 
+// tag::expimp[]
+=== Export/Import
+The Export and Import commands were added to make users' data more portable and easier to back-up and restore.
+This was done by redirecting the Storage component's `saveAddressBook()` and `readAddressBook()` methods to user-defined file paths.
+The user input for destination file path (export) and origin file path (import) is parsed as a String through `ExportCommandParser` and `ImportCommandParser`.
+
+[source, java]
+----
+public abstract class Command {
+    protected Model model;
+    protected CommandHistory history;
+    protected UndoRedoStack undoRedoStack;
+    protected Storage storage;
+----
+
+The Command abstract class was expanded on to allow access to Storage Components through StorageManager. This is what allows the
+Export and Import Commands to access `storage.saveAddressBook()` and `storage.readAddressBook()`.
+The code snippet shown above can also be found in link:{repoURL}/src/main/java/seedu/address/logic/commands/Command.java[`Command.java`]
+
+==== Design Considerations
+*Aspect:* Mechanism for writing to file +
+*Alternative 1 (Current Choice):* Expanding Command abstract class to allow Commands to have access to StorageManager methods. +
+*Pros:* the addition of Storage access to Command is very unlikely to affect the implementation of other features, and makes efficient use of `StorageManager.java`. +
+*Cons:* Insisting on precise directory location is rather unintuitive for most users, implementations where Windows explorer (or Finder for Mac) is called to show where to save the file would be better,
+unfortunately the constraints of the module forbid us from doing so.
+
+*Alternative 2:* Calling explorer or finder to select the directory location +
+*Pros:* Intuitive method to selecting file destinations +
+*Cons:* Implementation is slightly more complex, command would now be executed in 2 or more steps, which is against the project's allowance.
+// end::expimp[]
+
+<<<
+
 === Logging
 
 We are using `java.util.logging` package for logging. The `LogsCenter` class is used to manage the logging levels and logging destinations.
