--- a/docs/team/[T17-B3][Emil Koh]Portfolio.adoc
+++ b/docs/team/[T17-B3][Emil Koh]Portfolio.adoc
@@ -36,7 +36,7 @@ include::../DeveloperGuide.adoc[leveloffset=+2, tag=sort]
 
 ==== External Behaviour
 
-include::UserGuide.adoc[leveloffset=+2, tag=listtag]
+include::../UserGuide.adoc[leveloffset=+2, tag=listtag]
 
 ==== Justification
 This allows the user more flexibility in searching for several contacts with similar tags, a major quality of life improvement.
@@ -57,6 +57,35 @@ All the user's data can be easily transferred between terminals and can also be 
 
 ==== Implementation
 
-//to continue after include implementation of export/import in Dev Guide
+include::../DeveloperGuide.adoc[leveloffset=+2, tag=expimp]
+
+=== Enhancement Proposed: Changing User Settings: `settings`
+
+==== External Behaviour
+Format: `settings`
+
+1. Enter `settings` followed by the setting the user wishes to change
+2. input the change
+3. User Settings would now be updated.
+
+Example: `settings filepath C:\user\desktop\Circles\data.xml` +
+The above command would change the default destination file path for saving the contacts list to the user-defined directory.
+
+==== Justification
+Since now Commands have access to StorageManager methods,
+allowing commands to change the settings saved to Config.json or preferences.json would be the next step to quality of life improvements.
+This allows the user more room to customize the product, and defines the user's ownership of the product, as well as his control over aesthetics and minor GUI adjustments of Circles.
+It would also allow expansion into more customized user experiences like custom themes and css files, which we can now save in the json files
+so Circles knows which css file to use when initializing.
+
+==== Implementation
+A possible method of doing so would be changing the `UserPrefs` object that would subsequently be saved in the Storage component to preferences.json.
+`StorageManager` can then save the user preferences and overwrite the save json file for storage.
+
+=== Other Contributions
+* Researched Storage Component extensively to find a way to save HashMaps in some form, to aid development of the setcolour command. +
+The Command was to allow users to change the color of tags, but we didnt have a way to store the changes, so the colours would revert back to default whenever the program was restarted.
+(Pull Requests link:https://github.com/CS2103AUG2017-T17-B3/main/pull/37[#37], link:https://github.com/CS2103AUG2017-T17-B3/main/pull/43[#43])
+
 
 
