--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -16,11 +16,11 @@ By: `CS2103AUG2017 T16-B2`      Since: `Sep 2017`      Licence: `MIT`
 
 == Introduction
 
-`cherBook` is an application specifically designed to help teachers keep up with their hectic schedule adn monitor students' academic progress.
+`cherBook` is an application specifically designed to help teachers keep up with their hectic schedule and monitor students' academic progress.
 Need to do reports on students' academic progress and help students lagging behind?
 No worries, `cherBook`'s data analysis helps you find trends in student's academic development and identify students that need extra help.
-//TODO: celine please add in your scheduling part:
-Too many consultations to take care of??? Insert problem here.
+For teachers and educators like you who often have countless meetings and consultations every week, we also have you covered.
+`cherBook`'s scheduling feature allows you to keep track of your dates and times easily within seconds.
 
 `cherBook v1.5` is available for the Linux, Unix and Windows and Mac OS X operating systems
 
@@ -231,6 +231,7 @@ Deletes the 1st person in the results of the `find` command.
 `d 3` (`delete 3` command) +
 Deletes the 3rd person in cherBook.
 
+// tag::schedule[]
 === Scheduling a person : `schedule` `Since v1.4`
 
 Schedules the person identified by the index number used in the last person listing. +
@@ -251,7 +252,9 @@ Schedules the 2nd person in cherBook for tomorrow at 7pm and adds the schedule t
 * `find Betsy` +
 `sch 1 s/25 december 2017 3pm` +
 Schedules the 1st person in cherBook on 25 December at 3pm and adds the schedule to the schedule list in the results of the `find` command.
+// end::schedule[]
 
+// tag::viewschedule[]
 === Viewing my schedule : `viewschedule` `Since v1.5`
 
 Views your full schedule list. +
@@ -270,6 +273,7 @@ Displays all your schedules in the command box.
 * `find Betsy` +
 `viewsch` +
 Displays all your schedules in the command box.
+// end::viewschedule[]
 
 
 === Selecting a person : `select` `Since v1.0`
@@ -296,6 +300,7 @@ Selects the 1st person in the results of the `find` command.
 `s 3` (`select 3` command) +
 Selects the 3rd person in cherBook.
 
+// tag::sort[]
 === Sorting all persons : `sort` `Since v1.2`
 
 Shows a list of all persons in cherBook sorted in alphabetical order. +
@@ -316,6 +321,7 @@ Sorts the list in alphabetical order.
 * `find Betsy` +
 `st` +
 Sorts the list in alphabetical order.
+// end::sort[]
 
 // tag::remark[]
 === Adding/Deleting a remark to a person : `remark` `Since v1.2`
@@ -441,7 +447,9 @@ Format: `exit`
 // tag::studentdetailspanel[]
 === Student Details Panel
 
-//TODO: Celine can add explanations for this
+cherBook uses a `Student Details Panel` to display the selected student details from the `Students Panel`.
+The details changes automatically where there is a change to the list of students in the `Students Panel`.
+You can use these details to pick out relevant information you need from your student.
 
 // end::studentdetailspanel[]
 
@@ -450,7 +458,7 @@ Format: `exit`
 === Statistics Panel
 
 cherBook uses a `Statistics Panel` to display the relevant statistics for the current list of students in the `Students Panel`.
-The statistics automatically changes whenever there is a change to the list of students in the `Students Panel`.
+The statistics changes automatically when there is a change to the list of students in the `Students Panel`.
 E.g. When you enter the command `findtags studentCouncil`, the `Students Panel` will only show students with the `studentcouncil` tag and `Statistics Panel` will then show statistics for students with the `studentcouncil` tag.
 You can use these statistics to pick out trends in your student's grades and also monitor how well they are coping with their studies.
 // end::statisticspanel[]
@@ -545,35 +553,38 @@ In version v1.0, users will be able to:
 * Use command shortcuts
 
 === Features added in v1.1
-In version v1.1, users will be able to:
+In version v1.1, you are be able to:
 
 * Find students by tags using the `findtags` command
-* Sort Students by name using the `sort` command
 * Add `PostalCode` attributes to their students
+* Add multiple numbers for each student
 
 === Features added in v1.2
-In version v1.2, users will be able to:
+In version v1.2, you are be able to:
 
-* Add `Grades` and `FormClass` attributes to their students
-* Add multiple phone numbers for each student
+* Add `Grades`,`FormClass` and `Remarks` attributes to their students
+* Differentiate the multiple phone numbers for each student
+* Sort students names in alphabetical order using the `sort` command
 
 === Features added in v1.3
-In version v1.3, users will be able to:
+In version v1.3, you are be able to:
 
-* Add Remarks to their students
+* View graph of your student's academics grades
+* View all your student's information on the `Student Details Panel`
+* Have optional fields like (email, grades, address, postal code, remarks and tags) when adding a student
 
 === Features added in v1.4
-In version v1.4, users will be able to:
+In version v1.4, you are be able to:
 
 * View statistics of the current list of students from the `Statistics Panel`
-* View the grades of the currently selected student's class in the `Graph Panel`
-//TODO: uhm celine...
-* Schedule appointments?
+* Use the `ScheduleComand` to add a schedule into your schedule list
+* Have automated assignment of different colours to different tags according to suitable RGB values
 
 === Features added in v1.5
-In version v1.5, users will be able to:
+In version v1.5, you are be able to:
 
-* Select between two graphs: Line graph or Bar chart, to see the statistics of the currently selected person's class
+* Use the `TabCommand` to display different graph types (Line/Bar Chart) of the selected student's academic grades
+* Use the `ViewScheduleCommand` to view all your schedules in a list sorted by date and time
 
 === Features Coming in v2.0
 In version v2.0, users will be able to:
